--- a/index.html
+++ b/index.html
@@ -2,97 +2,104 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI ERP Integration Company</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Opsage – AI-Powered ERP Solutions</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body { font-family: 'Inter', sans-serif; }
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
   </style>
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-white text-gray-800">
 
-  <!-- Header -->
-  <header class="bg-white shadow-md sticky top-0 z-50">
-    <div class="container mx-auto flex items-center justify-between px-4 py-4">
-      <div class="flex items-center">
-        <div class="w-8 h-8 bg-blue-100 rounded-full flex items-center justify-center text-blue-700 text-xl font-bold">A</div>
-        <span class="ml-2 font-semibold text-lg">AI ERP Solutions</span>
-      </div>
-      <nav class="hidden md:block space-x-6 text-sm font-medium text-gray-600">
-        <a href="#offerings" class="hover:text-blue-600">Offerings</a>
-        <a href="#about" class="hover:text-blue-600">About</a>
-        <a href="#contact" class="hover:text-blue-600">Contact</a>
+  <!-- Navbar -->
+  <header class="fixed top-0 left-0 right-0 bg-indigo-700 text-white shadow z-50">
+    <div class="max-w-7xl mx-auto flex items-center justify-between py-4 px-6">
+      <div class="text-xl font-extrabold tracking-tight">Opsage</div>
+      <nav class="hidden md:flex space-x-6 text-sm">
+        <a href="#solutions" class="hover:text-indigo-300">Solutions</a>
+        <a href="#about" class="hover:text-indigo-300">About Us</a>
+        <a href="#contact" class="hover:text-indigo-300">Contact</a>
       </nav>
     </div>
   </header>
 
-  <!-- Hero Section -->
-  <section class="bg-gradient-to-br from-blue-800 to-blue-500 text-white py-20 px-4">
-    <div class="container mx-auto max-w-5xl text-center md:text-left md:flex items-center justify-between">
-      <div class="md:w-1/2">
-        <h1 class="text-4xl md:text-5xl font-extrabold mb-4">AI-Powered ERP Integration</h1>
-        <p class="text-lg md:text-xl mb-6">Automate your Microsoft Dynamics workflows and drive efficiency — at a fraction of the cost of human labor.</p>
-        <a href="#contact" class="bg-white text-blue-700 font-semibold px-6 py-3 rounded-full shadow hover:bg-blue-100 transition">Request a Demo</a>
-      </div>
-      <div class="md:w-1/2 mt-10 md:mt-0 flex justify-center">
-        <div class="w-72 h-44 bg-white bg-opacity-20 rounded-lg flex items-center justify-center text-white text-lg border-2 border-dashed border-white">
-          Dashboard Preview
-        </div>
-      </div>
+  <!-- Hero -->
+  <section class="pt-28 pb-20 bg-gradient-to-br from-indigo-800 to-indigo-500 text-white text-center">
+    <div class="max-w-4xl mx-auto px-6">
+      <h1 class="text-5xl font-bold leading-tight">
+        Transform ERP with AI-Powered Intelligence
+      </h1>
+      <p class="mt-6 text-lg md:text-xl leading-relaxed">
+        Opsage integrates seamlessly with Microsoft Dynamics to automate your finance, supply chain, and retail operations—cutting manual work by up to 75%.
+      </p>
+      <a href="#contact" class="mt-8 inline-block bg-white text-indigo-700 font-semibold px-8 py-3 rounded-full hover:bg-indigo-100 transition">
+        Book a Demo
+      </a>
     </div>
   </section>
 
-  <!-- Offerings -->
-  <section id="offerings" class="py-16 px-4 bg-white">
-    <div class="container mx-auto max-w-6xl">
-      <h2 class="text-3xl font-bold mb-8 text-center text-blue-700">Our Solutions</h2>
+  <!-- Solutions -->
+  <section id="solutions" class="py-20 bg-white">
+    <div class="max-w-6xl mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center text-indigo-700 mb-12">Smart ERP Solutions for Modern Enterprises</h2>
       <div class="grid md:grid-cols-3 gap-8">
-        <div class="bg-gray-50 rounded-lg p-6 border">
-          <h3 class="font-semibold text-lg mb-2 text-blue-800">AI ERP Assistant</h3>
-          <p>Chatbot for D365 (FnO, BC) to answer queries like “Show my pending GRNs”, “Predict late invoices”.</p>
-          <p class="mt-2 text-sm text-blue-600">Per user/month or one-time</p>
+        <div class="bg-indigo-50 rounded-xl p-6 shadow hover:shadow-lg transition">
+          <h3 class="text-xl font-semibold mb-2 text-indigo-800">⚡️ AI ERP Copilot</h3>
+          <p class="text-gray-700">
+            Conversational assistant for Microsoft Dynamics: instantly answer finance, inventory, and procurement queries using natural language.
+          </p>
+          <p class="mt-2 text-sm text-indigo-500">Fast setup • Per-seat monthly or one-time license</p>
         </div>
-        <div class="bg-gray-50 rounded-lg p-6 border">
-          <h3 class="font-semibold text-lg mb-2 text-blue-800">Process Automation</h3>
-          <p>Automate invoice matching, journal posting, and alerts for delayed payments.</p>
-          <p class="mt-2 text-sm text-blue-600">Project fee + support AMC</p>
+        <div class="bg-indigo-50 rounded-xl p-6 shadow hover:shadow-lg transition">
+          <h3 class="text-xl font-semibold mb-2 text-indigo-800">🔁 Workflow Automation</h3>
+          <p class="text-gray-700">
+            Eliminate manual journal entries, invoice routing, and data reconciliation. Let AI handle repetitive ERP workflows.
+          </p>
+          <p class="mt-2 text-sm text-indigo-500">Project-based with optional AMC support</p>
         </div>
-        <div class="bg-gray-50 rounded-lg p-6 border">
-          <h3 class="font-semibold text-lg mb-2 text-blue-800">Insights as a Service</h3>
-          <p>Dynamic dashboards for risk, cash flow prediction, and demand forecasting.</p>
-          <p class="mt-2 text-sm text-blue-600">Monthly SaaS pricing</p>
+        <div class="bg-indigo-50 rounded-xl p-6 shadow hover:shadow-lg transition">
+          <h3 class="text-xl font-semibold mb-2 text-indigo-800">📊 Predictive Insights</h3>
+          <p class="text-gray-700">
+            Real-time dashboards that forecast cash flow, demand surges, and procurement delays — delivered as a monthly AI insights service.
+          </p>
+          <p class="mt-2 text-sm text-indigo-500">SaaS subscription model • Custom KPIs</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- About -->
-  <section id="about" class="py-16 px-4 bg-blue-50">
-    <div class="container mx-auto max-w-3xl text-center">
-      <h2 class="text-2xl font-bold text-blue-800 mb-4">Who We Are</h2>
-      <p class="text-gray-700 leading-relaxed">
-        We're a Microsoft Solution Partner specializing in ERP and AI. Our mission is to empower SMBs and mid-size enterprises using Dynamics 365 (FnO, BC, LS Retail) with advanced automation, AI copilots, and GPT-based tools — all packaged for cost-effective deployment and scale.
+  <!-- About Us -->
+  <section id="about" class="py-20 bg-gradient-to-b from-indigo-50 to-white text-center">
+    <div class="max-w-3xl mx-auto px-6">
+      <h2 class="text-2xl font-bold text-indigo-800 mb-4">Why Opsage?</h2>
+      <p class="text-lg text-gray-700 leading-relaxed">
+        Opsage is an AI ERP enablement company for SMBs and mid-market enterprises. We bring together Microsoft Dynamics 365, GPT-4, and Power Platform to automate business workflows, accelerate decision making, and reduce costs.
+      </p>
+      <p class="text-md text-gray-600 mt-4">
+        As a Microsoft Partner, our solutions live where your data already is — helping you move fast, stay compliant, and focus on growth.
       </p>
     </div>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="py-16 px-4">
-    <div class="max-w-xl mx-auto bg-white shadow-md rounded-lg p-8">
-      <h2 class="text-2xl font-bold mb-6 text-blue-800">Get in Touch</h2>
+  <section id="contact" class="py-20 bg-white">
+    <div class="max-w-md mx-auto px-6">
+      <h2 class="text-2xl font-bold text-indigo-800 mb-6">Talk to Us</h2>
       <form>
-        <input type="text" placeholder="Your Name" class="w-full mb-4 p-3 border rounded" required>
-        <input type="email" placeholder="Email Address" class="w-full mb-4 p-3 border rounded" required>
-        <textarea placeholder="Message" class="w-full mb-4 p-3 border rounded" rows="4" required></textarea>
-        <button type="submit" class="w-full bg-blue-700 text-white font-semibold py-3 rounded hover:bg-blue-900 transition">Send Message</button>
+        <input type="text" placeholder="Your Name" class="w-full mb-4 p-3 border border-gray-300 rounded" required />
+        <input type="email" placeholder="Email Address" class="w-full mb-4 p-3 border border-gray-300 rounded" required />
+        <textarea placeholder="What are you looking to automate?" class="w-full mb-4 p-3 border border-gray-300 rounded" rows="4" required></textarea>
+        <button type="submit" class="w-full bg-indigo-700 text-white font-semibold py-3 rounded hover:bg-indigo-900 transition">Send Message</button>
       </form>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="text-center py-6 bg-gray-100 text-sm text-gray-500">
-    © 2025 AI ERP Solutions — All Rights Reserved
+  <footer class="py-6 bg-indigo-700 text-white text-center text-sm">
+    © 2025 Opsage. All Rights Reserved
   </footer>
 
 </body>
