--- a/index.html
+++ b/index.html
@@ -71,18 +71,62 @@
     </div>
   </section>
 
-  <!-- About Us -->
-  <section id="about" class="py-20 bg-gradient-to-b from-indigo-50 to-white text-center">
-    <div class="max-w-3xl mx-auto px-6">
-      <h2 class="text-2xl font-bold text-indigo-800 mb-4">Why Opsage?</h2>
-      <p class="text-lg text-gray-700 leading-relaxed">
-        Opsage is an AI ERP enablement company for SMBs and mid-market enterprises. We bring together Microsoft Dynamics 365, GPT-4, and Power Platform to automate business workflows, accelerate decision making, and reduce costs.
+   <!-- About Us -->
+<section id="about" class="py-20 bg-gradient-to-b from-indigo-50 to-white">
+  <div class="max-w-4xl mx-auto px-6">
+    <h2 class="text-3xl font-bold text-indigo-800 mb-12 text-center">Who We Are</h2>
+    <div class="text-gray-700 space-y-8 text-lg leading-relaxed">
+      <p><strong class="text-indigo-700">Opsage blends operational wisdom with intelligent systems.</strong> We’re not just another ERP service provider — we’re your behind-the-scenes brain, engineering smarter business operations with AI, Microsoft Dynamics, and Power Platform.</p>
+      
+      <p>In a world drowning in manual processes and data noise, Opsage exists to bring <strong>signal, simplicity, and speed</strong>. We build intelligent ERP extensions that don't just work — they think, predict, and act.</p>
+
+      <h3 class="text-2xl font-semibold text-indigo-800 pt-6">Our Mission</h3>
+      <p>To turn traditional ERP into <strong>autonomous operational intelligence</strong>.</p>
+      <p>
+        Imagine your ERP acting as a silent teammate — one that knows your business, anticipates your needs, and gets things done without being told.
+        With Opsage, your systems evolve from:
       </p>
-      <p class="text-md text-gray-600 mt-4">
-        As a Microsoft Partner, our solutions live where your data already is — helping you move fast, stay compliant, and focus on growth.
+      <ul class="pl-6 list-disc text-base text-gray-700">
+        <li>Click-heavy processes ➝ Natural prompts</li>
+        <li>Static reports ➝ Proactive insights</li>
+        <li>Overwhelmed teams ➝ Empowered decision-makers</li>
+      </ul>
+
+      <h3 class="text-2xl font-semibold text-indigo-800 pt-6">What Sets Us Apart</h3>
+      <p>
+        We don’t sell licenses. <strong>We unlock possibilities.</strong>
+        By deeply integrating Microsoft Dynamics (BC, F&O, LS Retail) with AI models, Power Automate, and Dataverse, we create ecosystems where workflows run themselves and insights surface when you need them — not when you dig for them.
       </p>
+      <p>
+        It’s not about replacing people. <strong>It’s about giving them superpowers.</strong>
+      </p>
+
+      <h3 class="text-2xl font-semibold text-indigo-800 pt-6">Why Opsage?</h3>
+      <p><strong>Because time is your most expensive resource. And bad systems waste it every day.</strong></p>
+      <p>
+        We help fast-growing businesses:
+      </p>
+      <ul class="pl-6 list-disc text-base text-gray-700">
+        <li>Scale operations without scaling chaos</li>
+        <li>Reduce overhead with intelligent workflows</li>
+        <li>Uncover insights that drive action, not more analysis</li>
+      </ul>
+
+      <h3 class="text-2xl font-semibold text-indigo-800 pt-6">The Future Is Intelligent Ops</h3>
+      <p>
+        The next generation of business systems won't be passive tools. <strong>They’ll be partners.</strong> And with Opsage, that future is already here.
+      </p>
+      <p class="text-xl font-semibold text-indigo-800 pt-6">Let’s build something smarter.</p>
+
+      <div class="pt-8 flex justify-center">
+        <a href="#contact" class="inline-block bg-indigo-700 hover:bg-indigo-800 text-white text-lg font-semibold px-6 py-3 rounded-full transition">
+          📲 Schedule a Discovery Call
+        </a>
+      </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Contact -->
   <section id="contact" class="py-20 bg-white">
