--- a/index.html
+++ b/index.html
@@ -101,28 +101,35 @@
         It’s not about replacing people. <strong>It’s about giving them superpowers.</strong>
       </p>
 
-      <h3 class="text-2xl font-semibold text-indigo-800 pt-6">Why Opsage?</h3>
-      <p><strong>Because time is your most expensive resource. And bad systems waste it every day.</strong></p>
-      <p>
-        We help fast-growing businesses:
-      </p>
-      <ul class="pl-6 list-disc text-base text-gray-700">
-        <li>Scale operations without scaling chaos</li>
-        <li>Reduce overhead with intelligent workflows</li>
-        <li>Uncover insights that drive action, not more analysis</li>
+      <!-- Why Opsage Section -->
+<section id="why-opsage" class="py-20 bg-white">
+  <div class="max-w-4xl mx-auto px-6">
+    <h2 class="text-3xl font-bold text-indigo-800 mb-8 text-center">Why Opsage?</h2>
+    <p class="text-lg text-gray-700 mb-6 text-center font-medium">
+      Modern businesses don’t need more software — they need smarter operations.
+    </p>
+    <p class="text-lg text-gray-700 mb-8 text-center">
+      <span class="font-semibold text-indigo-700">Opsage</span> is where AI-native design meets ERP precision.<br>
+      We supercharge Microsoft Dynamics — from Finance & Operations to Business Central and LS Retail — by weaving in generative AI, low-code automation, and real-time data intelligence.
+    </p>
+    <p class="text-base text-gray-700 mb-6 text-center">
+      The result? A self-evolving, always-on operational layer that thinks, learns, and acts like your best team member.
+    </p>
+    <div class="bg-indigo-50 rounded-xl p-8 mb-8 shadow">
+      <h3 class="text-xl font-semibold text-indigo-800 mb-4 text-center">Forget clunky interfaces, manual workarounds, and disconnected processes. With Opsage, you get:</h3>
+      <ul class="list-disc px-4 md:px-10 space-y-3 text-gray-800 text-base">
+        <li><strong>AI-powered workflows</strong> that reduce lag and overhead</li>
+        <li><strong>Embedded co-pilots</strong> that simplify decisions across finance, supply chain, and retail</li>
+        <li><strong>Seamless Power Platform and Dataverse integration</strong> — no silos, no delays</li>
+        <li><strong>A team that builds with you</strong> — not just for you</li>
       </ul>
-
-      <h3 class="text-2xl font-semibold text-indigo-800 pt-6">The Future Is Intelligent Ops</h3>
-      <p>
-        The next generation of business systems won't be passive tools. <strong>They’ll be partners.</strong> And with Opsage, that future is already here.
-      </p>
-      <p class="text-xl font-semibold text-indigo-800 pt-6">Let’s build something smarter.</p>
-
-      <div class="pt-8 flex justify-center">
-        <a href="#contact" class="inline-block bg-indigo-700 hover:bg-indigo-800 text-white text-lg font-semibold px-6 py-3 rounded-full transition">
-          📲 Schedule a Discovery Call
-        </a>
-      </div>
+    </div>
+    <p class="text-lg text-gray-700 mb-6 text-center">
+      We’re not just implementing tools. We’re transforming how work gets done — so your teams can scale smarter, respond faster, and operate with clarity.
+    </p>
+    <div class="text-center">
+      <p class="text-xl text-indigo-700 font-semibold mb-4">Opsage turns your ERP from a system of record into a system of intelligence.</p>
+      <p class="text-lg">Let’s build the operations of tomorrow, today.</p>
     </div>
   </div>
 </section>
