--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
+    html { scroll-behavior: smooth; }
+    body { font-family: 'Poppins', sans-serif; }
   </style>
 </head>
 <body class="bg-white text-gray-800">
@@ -21,6 +20,7 @@
       <nav class="hidden md:flex space-x-6 text-sm">
         <a href="#solutions" class="hover:text-indigo-300">Solutions</a>
         <a href="#about" class="hover:text-indigo-300">About Us</a>
+        <a href="#why-opsage" class="hover:text-indigo-300">Why Opsage?</a>
         <a href="#contact" class="hover:text-indigo-300">Contact</a>
       </nav>
     </div>
@@ -71,69 +71,95 @@
     </div>
   </section>
 
-   <!-- About Us -->
-<section id="about" class="py-20 bg-gradient-to-b from-indigo-50 to-white">
-  <div class="max-w-4xl mx-auto px-6">
-    <h2 class="text-3xl font-bold text-indigo-800 mb-12 text-center">Who We Are</h2>
-    <div class="text-gray-700 space-y-8 text-lg leading-relaxed">
-      <p><strong class="text-indigo-700">Opsage blends operational wisdom with intelligent systems.</strong> We’re not just another ERP service provider — we’re your behind-the-scenes brain, engineering smarter business operations with AI, Microsoft Dynamics, and Power Platform.</p>
-      
-      <p>In a world drowning in manual processes and data noise, Opsage exists to bring <strong>signal, simplicity, and speed</strong>. We build intelligent ERP extensions that don't just work — they think, predict, and act.</p>
-
-      <h3 class="text-2xl font-semibold text-indigo-800 pt-6">Our Mission</h3>
-      <p>To turn traditional ERP into <strong>autonomous operational intelligence</strong>.</p>
-      <p>
-        Imagine your ERP acting as a silent teammate — one that knows your business, anticipates your needs, and gets things done without being told.
-        With Opsage, your systems evolve from:
-      </p>
-      <ul class="pl-6 list-disc text-base text-gray-700">
-        <li>Click-heavy processes ➝ Natural prompts</li>
-        <li>Static reports ➝ Proactive insights</li>
-        <li>Overwhelmed teams ➝ Empowered decision-makers</li>
-      </ul>
-
-      <h3 class="text-2xl font-semibold text-indigo-800 pt-6">What Sets Us Apart</h3>
-      <p>
-        We don’t sell licenses. <strong>We unlock possibilities.</strong>
-        By deeply integrating Microsoft Dynamics (BC, F&O, LS Retail) with AI models, Power Automate, and Dataverse, we create ecosystems where workflows run themselves and insights surface when you need them — not when you dig for them.
-      </p>
-      <p>
-        It’s not about replacing people. <strong>It’s about giving them superpowers.</strong>
-      </p>
-
-      <!-- Why Opsage Section -->
-<section id="why-opsage" class="py-20 bg-white">
-  <div class="max-w-4xl mx-auto px-6">
-    <h2 class="text-3xl font-bold text-indigo-800 mb-8 text-center">Why Opsage?</h2>
-    <p class="text-lg text-gray-700 mb-6 text-center font-medium">
-      Modern businesses don’t need more software — they need smarter operations.
-    </p>
-    <p class="text-lg text-gray-700 mb-8 text-center">
-      <span class="font-semibold text-indigo-700">Opsage</span> is where AI-native design meets ERP precision.<br>
-      We supercharge Microsoft Dynamics — from Finance & Operations to Business Central and LS Retail — by weaving in generative AI, low-code automation, and real-time data intelligence.
-    </p>
-    <p class="text-base text-gray-700 mb-6 text-center">
-      The result? A self-evolving, always-on operational layer that thinks, learns, and acts like your best team member.
-    </p>
-    <div class="bg-indigo-50 rounded-xl p-8 mb-8 shadow">
-      <h3 class="text-xl font-semibold text-indigo-800 mb-4 text-center">Forget clunky interfaces, manual workarounds, and disconnected processes. With Opsage, you get:</h3>
-      <ul class="list-disc px-4 md:px-10 space-y-3 text-gray-800 text-base">
-        <li><strong>AI-powered workflows</strong> that reduce lag and overhead</li>
-        <li><strong>Embedded co-pilots</strong> that simplify decisions across finance, supply chain, and retail</li>
-        <li><strong>Seamless Power Platform and Dataverse integration</strong> — no silos, no delays</li>
-        <li><strong>A team that builds with you</strong> — not just for you</li>
-      </ul>
+  <!-- About Us -->
+  <section id="about" class="py-20 bg-gradient-to-b from-indigo-50 to-white">
+    <div class="max-w-4xl mx-auto px-6">
+      <h2 class="text-3xl font-bold text-indigo-800 mb-12 text-center">Who We Are</h2>
+      <div class="text-gray-700 space-y-8 text-lg leading-relaxed">
+        <p><strong class="text-indigo-700">Opsage blends operational wisdom with intelligent systems.</strong> We’re not just another ERP service provider — we’re your behind-the-scenes brain, engineering smarter business operations with AI, Microsoft Dynamics, and Power Platform.</p>
+        <p>In a world drowning in manual processes and data noise, Opsage exists to bring <strong>signal, simplicity, and speed</strong>. We build intelligent ERP extensions that don't just work — they think, predict, and act.</p>
+        <h3 class="text-2xl font-semibold text-indigo-800 pt-6">Our Mission</h3>
+        <p>To turn traditional ERP into <strong>autonomous operational intelligence</strong>.</p>
+        <p>
+          Imagine your ERP acting as a silent teammate — one that knows your business, anticipates your needs, and gets things done without being told.
+          With Opsage, your systems evolve from:
+        </p>
+        <ul class="pl-6 list-disc text-base text-gray-700">
+          <li>Click-heavy processes ➝ Natural prompts</li>
+          <li>Static reports ➝ Proactive insights</li>
+          <li>Overwhelmed teams ➝ Empowered decision-makers</li>
+        </ul>
+        <h3 class="text-2xl font-semibold text-indigo-800 pt-6">What Sets Us Apart</h3>
+        <p>
+          We don’t sell licenses. <strong>We unlock possibilities.</strong>
+          By deeply integrating Microsoft Dynamics (BC, F&O, LS Retail) with AI models, Power Automate, and Dataverse, we create ecosystems where workflows run themselves and insights surface when you need them — not when you dig for them.
+        </p>
+        <p>
+          It’s not about replacing people. <strong>It’s about giving them superpowers.</strong>
+        </p>
+        <h3 class="text-2xl font-semibold text-indigo-800 pt-6">Why Opsage?</h3>
+        <p><strong>Because time is your most expensive resource. And bad systems waste it every day.</strong></p>
+        <p>
+          We help fast-growing businesses:
+        </p>
+        <ul class="pl-6 list-disc text-base text-gray-700">
+          <li>Scale operations without scaling chaos</li>
+          <li>Reduce overhead with intelligent workflows</li>
+          <li>Uncover insights that drive action, not more analysis</li>
+        </ul>
+        <h3 class="text-2xl font-semibold text-indigo-800 pt-6">The Future Is Intelligent Ops</h3>
+        <p>
+          The next generation of business systems won't be passive tools. <strong>They’ll be partners.</strong> And with Opsage, that future is already here.
+        </p>
+        <p class="text-xl font-semibold text-indigo-800 pt-6">Let’s build something smarter.</p>
+        <div class="pt-8 flex justify-center">
+          <a href="#contact" class="inline-block bg-indigo-700 hover:bg-indigo-800 text-white text-lg font-semibold px-6 py-3 rounded-full transition">
+            📲 Schedule a Discovery Call
+          </a>
+        </div>
+      </div>
     </div>
-    <p class="text-lg text-gray-700 mb-6 text-center">
-      We’re not just implementing tools. We’re transforming how work gets done — so your teams can scale smarter, respond faster, and operate with clarity.
-    </p>
-    <div class="text-center">
-      <p class="text-xl text-indigo-700 font-semibold mb-4">Opsage turns your ERP from a system of record into a system of intelligence.</p>
-      <p class="text-lg">Let’s build the operations of tomorrow, today.</p>
-    </div>
-  </div>
-</section>
+  </section>
 
+  <!-- Why Opsage Section -->
+  <section id="why-opsage" class="py-20 bg-gradient-to-b from-indigo-50 to-white">
+    <div class="max-w-4xl mx-auto px-6">
+      <h2 class="text-3xl md:text-4xl font-bold text-indigo-800 mb-8 text-center">Why Opsage?</h2>
+      <p class="text-lg md:text-xl text-gray-700 text-center mb-8">
+        Modern businesses don’t need more software — they need smarter operations.
+        <br>
+        <span class="block mt-2 font-semibold text-indigo-700">Opsage</span> is where AI-native design meets ERP precision.
+      </p>
+      <div class="md:flex md:space-x-12 md:items-center mb-12">
+        <div class="md:w-2/3">
+          <p class="text-base md:text-lg text-gray-700 mb-4">
+            We supercharge Microsoft Dynamics — from Finance & Operations to Business Central and LS Retail — weaving in generative AI, low-code automation, and real-time data intelligence.
+          </p>
+          <p class="text-base md:text-lg text-gray-700 mb-4">
+            The result? A self-evolving, always-on operational layer that thinks, learns, and acts like your best team member.
+          </p>
+        </div>
+        <div class="md:w-1/3 mt-8 md:mt-0 bg-white border border-indigo-100 rounded-xl shadow p-6 text-base">
+          <h3 class="text-lg font-semibold text-indigo-800 mb-4 text-center">With Opsage, you get:</h3>
+          <ul class="list-disc pl-6 space-y-2 text-gray-800">
+            <li><span class="font-semibold">AI-powered workflows</span> that reduce lag and overhead</li>
+            <li><span class="font-semibold">Embedded co-pilots</span> for smarter, faster decisions</li>
+            <li><span class="font-semibold">Seamless Power Platform & Dataverse integration</span> — no silos, no delays</li>
+            <li><span class="font-semibold">A team that builds with you</span> — not just for you</li>
+          </ul>
+        </div>
+      </div>
+      <p class="text-base md:text-lg text-gray-700 text-center mb-6">
+        We’re not just implementing tools. We’re transforming how work gets done — so your teams can scale smarter, respond faster, and operate with clarity.
+      </p>
+      <div class="text-center">
+        <span class="block text-xl md:text-2xl text-indigo-700 font-semibold mb-3">
+          Opsage turns your ERP from a system of record into a system of intelligence.
+        </span>
+        <span class="text-lg">Let’s build the operations of tomorrow, today.</span>
+      </div>
+    </div>
+  </section>
 
   <!-- Contact -->
   <section id="contact" class="py-20 bg-white">
